<?xml version="1.0"?>
<package format="2">
  <name>urdf_test</name>
  <version>0.0.0</version>
  <description>The urdf_test package</description>

  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>urdf</depend>
</package>
